<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="top_text">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="cap_button">CAPSTONE</string>
    <string name="xyz_button">XYZ READER</string>
    <string name="build_button">BUILD IT BIGGER</string>
    <string name="library_button">LIBRARY APP</string>
    <string name="football_button">FOOTBALL SCORES APP</string>
    <string name="spotify_button">SPOTIFY STREAMER</string>
</resources>
