<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        style="@style/Text"
        android:text="@string/top_text"
        android:id="@+id/textView" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true">


        <Button
            style="@style/AppTheme.Button"
            android:text="@string/spotify_button"
            android:id="@+id/button"
            android:onClick="createToast" />

        <Button
            style="@style/AppTheme.Button"
            android:text="@string/football_button"
            android:id="@+id/button2"
            android:onClick="createToast" />

        <Button
            style="@style/AppTheme.Button"
            android:text="@string/library_button"
            android:id="@+id/button3"
            android:onClick="createToast" />

        <Button
            style="@style/AppTheme.Button"
            android:text="@string/build_button"
            android:id="@+id/button4"
            android:onClick="createToast" />

        <Button
            style="@style/AppTheme.Button"
            android:text="@string/xyz_button"
            android:id="@+id/button5"
            android:onClick="createToast" />

        <Button
            style="@style/AppTheme.Button.Cap"
            android:text="@string/cap_button"
            android:id="@+id/button6"
            android:onClick="createToast" />

    </LinearLayout>

</RelativeLayout>
